# DISCO2-module-template

./: meson.build
src/: emulate_camera.c  firsttest.c
src/utils/: memory_util.c
